<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@color/colorBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imgLogo"
                android:layout_margin="30dp"
                android:src="@drawable/ic_credits_24"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/applogo" />

            <TextView
                android:id="@+id/credits_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/imgLogo"
                android:layout_centerHorizontal="true"
                android:padding="15dp"
                android:text="@string/credits_header"
                android:textColor="@color/colorLightPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/credits_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/credits_header"
                android:layout_alignParentStart="true"
                android:padding="12dp"
                android:text="@string/credits_one"
                android:textColor="@color/primaryText"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/credits_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/credits_one"
                android:layout_alignParentStart="true"
                android:padding="12dp"
                android:text="@string/credits_two"
                android:textColor="@color/primaryText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/credits_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/credits_two"
                android:layout_alignParentStart="true"
                android:padding="12dp"
                android:text="@string/credits_three"
                android:textColor="@color/primaryText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/credits_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/credits_three"
                android:layout_alignParentStart="true"
                android:padding="12dp"
                android:text="@string/credits_four"
                android:textColor="@color/primaryText"
                android:textSize="20sp" />


        </RelativeLayout>

    </LinearLayout>

</ScrollView>