<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@android:dimen/app_icon_size"
        android:layout_marginTop="25sp"
        android:background="@color/colorLightPrimary"
        android:text="@string/login"
        android:textColor="@color/colorButtons"
        app:layout_constraintBottom_toTopOf="@id/btnRegistrationDB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />

    <Button
        android:id="@+id/btnRegistrationDB"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@android:dimen/app_icon_size"
        android:layout_marginTop="25sp"
        android:background="@color/colorLightPrimary"
        android:text="@string/register"
        android:textColor="@color/colorButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823" />

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="30sp"
        android:gravity="center"
        android:paddingStart="@android:dimen/app_icon_size"
        android:paddingEnd="@android:dimen/app_icon_size"
        android:text="@string/welcomeMessage"
        android:textColor="@color/primaryText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716" />

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="15sp"
        app:layout_constraintBottom_toTopOf="@+id/welcomeMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewBackgroundWelcome"
        app:layout_constraintVertical_bias="0.529"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/viewBackgroundWelcome"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/headerMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/textIcons"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/viewBackgroundWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewBackgroundWelcome"
        />

</androidx.constraintlayout.widget.ConstraintLayout>